# dual_arm_test

./: CMakeLists.txt  README.md  package.xml
config/: controllers.yaml  dual_arm_test.rviz  naive_trajectory_dual_ur.yaml  traj_single_ur.yaml  trajectory_dual_ur.yaml
launch/: dual_arm_test.launch.py  ros2_control.launch.py
scripts/: trajectory_executor.py  trajectory_loader.py
urdf/: env.xacro  top_level.xacro  ur_macro.xacro
